# Ai_interview_coach

./: .gitignore  README.md
backend/: fix_database.py  index.py  main.py  models.py  pyproject.toml  requirements.txt  reset_db.py
backend/app/: main.py
backend/app/api/routes/: answer.py  auth.py  history.py  interview.py  question.py  summary.py  upload.py
backend/app/core/: llm.py
backend/app/db/: database.py  models.py
backend/app/routes/: interview.py
backend/app/services/: adaptive.py  difficulty_service.py  evaluation.py  evaluation_service.py  followup_service.py  interview_service.py  question_service.py  rag_engine.py  rag_service.py  resume_parser.py  summary_service.py
backend/app/utils/: parser.py
backend/data/: questions.txt
backend/resume_data/: user_1_chunks.json  user_1_resume.txt  user_1_skills.json  user_2_chunks.json  user_2_resume.txt  user_2_skills.json  user_4_resume.txt  user_4_skills.json
frontend/: .env.example  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: api.js  apiService.js
frontend/src/components/: Answer.jsx  HistoryPanel.jsx  InterviewBox.jsx  Question.jsx  Upload.jsx
frontend/src/pages/: Auth.css  Auth.jsx  Dashboard.css  Dashboard.jsx  Landing.css  Landing.jsx  Summary.css  Summary.jsx
